# ChangeLog for x11-apps/yukon
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jan 2010; Anna Gabutero <amdg@lavabit.com> yukon-9999.ebuild:
  Fixing path to seom-filter
