@@ -1,2 +1,3 @@
 AUX 001-fix_library_install_paths.patch 1309 RMD160 7c98155a9cd452a53d07797f31d53a0e8d241179 SHA1 a41d5f52c19bbbbae12be28c5d84fe56922a71eb SHA256 0faf538e8b0dfb492101a49e39a1a9308b8b00ad303af4d17ba709a76185a19d
-EBUILD yukon-9999.ebuild 832 RMD160 9776aa3103c08934aa7aa67d2eb44276e886d520 SHA1 e45969a5fadd52b0a60bb46eca1b7c1e2cd81528 SHA256 fc60750b42900f06ba284d7bec1d9be540dab47e0613a1ca0f1ddbcd2fa8d046
+EBUILD yukon-9999.ebuild 1076 RMD160 e27e85833ef5e7a881034093f16110b24de82dad SHA1 ac8363e7f1800b62d4d0813d2b52333a4097b00d SHA256 67e6ed98a82f261fc358c2545baa1bc50f7439331a85a91c3e72f2322d02a8ef
+MISC ChangeLog 212 RMD160 300629952cfd06a4c4af991d1d921869da2b25f9 SHA1 a20e37bf8f030473ccfa4f6517631647274412a9 SHA256 571f57611a229ea55c0329cf538f8be3f7842281b4983bb04002afa4d605f119
